Fix some minor UI issues like: Flickering dropdown, search field not being cleared when no text matches, cursor moving in chrome when pressing up

--- a/src/common.css
+++ b/src/common.css
@@ -22,6 +22,10 @@
   background-color: #f5f5f5;
 }
 
+.ui-select-choices-row{
+    cursor: pointer;
+}
+
 /* Select2 theme */
 
 /* Mark invalid Select2 */
